Fix header sticky to work on Safari

--- a/app/styles/components/header.scss
+++ b/app/styles/components/header.scss
@@ -1,25 +1,17 @@
 header {
-		width: 100%;
-		display: block;
-		position: sticky;
-		left: 0;
-		right: 0;
-		top: 0;
-		z-index: 50;
-		background-color: transparent;
-		backdrop-filter: blur(20px);
-		height: 6rem;
-
-	@include media(max-width-1301) {
-		top:0;
-		position:-webkit-sticky;
-		position:sticky;
-		background:rgba(27,32,44,0.5);
-		-webkit-backdrop-filter:blur(10px);
-		-moz-backdrop-filter:blur(10px);
-		-ms-backdrop-filter:blur(10px);
-		backdrop-filter:blur(20px);
-	}
+	top:0;
+	left:0;
+	right:0;
+	z-index:50;
+	width:100%;
+	height:6rem;
+	display:block;
+	position:sticky;
+	background-color:transparent;
+	-webkit-backdrop-filter:blur(20px);
+	-moz-backdrop-filter:blur(20px);
+	-ms-backdrop-filter:blur(20px);
+	backdrop-filter:blur(20px);
 
 	content {
 
